Bug 249156 - Tabulator space in text file preview way too big.
Summary: Tabulator space in text file preview way too big.
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: thumbnail (other bugs)
Version First Reported In: SVN
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-27 01:01 UTC by Kai Uwe Broulik
Modified: 2010-09-12 15:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments
Showing dolphin's preview pane (9.81 KB, image/png)
2010-08-27 01:01 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2010-08-27 01:01:53 UTC
Created attachment 50994 [details]
Showing dolphin's preview pane

Version:           SVN (using KDE 4.5.0) 
OS:                Linux

If you hover over a text file (or php script or anything text-ish) or you have text file preview enabled, you'll find that the tabulator is way too big.
Lines beginning with a tabulator are almost out of the icon and it it quite unusable for code, which mostly uses tabulators.
Tabulator is almost 14 characters wide in preview.

Reproducible: Always
Comment 1 Christoph Feck 2010-09-12 15:20:46 UTC
SVN commit 1174452 by cfeck:

Fix tab width in text thumbnails

The width of a tab character should be set to the same size as
eight space characters.

Additionally, use a fixed-width font only when formatting with
white space is used in the middle of the text lines, making files
that use multiple spaces or tabs for identation more readable.

BUG: 249156
FIXED-IN: 4.6.0


 M  +11 -4     textcreator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1174452